tests/snapshots/regression/semantic_types__adts__constructor_arity_error.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/adts/constructor_arity_error.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 2 errors • tests/fixtures/semantic_types/adts/constructor_arity_error.flx
error[E430]: Any Type Inferred

Could not determine a concrete type for `main`. Inferred type: `() -> _`.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:3:1
  |
3 | fn main() {
  | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E082]: Constructor Arity Mismatch

Constructor `Pair` expects 2 argument(s) but got 1.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:4:5
  |
4 |     Pair(1)
  |     ^^^^^^^

Found 2 errors.
